--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://webapi.amap.com/maps?v=2.0&key=4ed3b5e354a82d509bde8c61c3e89ff4"></script>
-    <title>React App</title>
+    <title>智慧公厕管理系统</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="height:100%"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
